--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "reactstrap": "^9.1.8",
     "remixicon": "^3.1.1",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "set BUILD_PATH=../server/static&& react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
